# wav2mp3

./: .clang-tidy  .gitignore  CMakeLists.txt  Makefile  cmake_mingw_build.cmd  cmake_mingw_build_clang.cmd  readme.md  run_clang_tidy.cmd  toolchain_clang.cmake  toolchain_gcc.cmake
include/: convert.h  memory_layout.h  pthread_raii.h  uint_helper.h  util.h  wav.h
src/: CMakeLists.txt  convert.cpp  main.cpp  memory_layout.cpp  util.cpp  wav.cpp
